# Depth-Anything-V2

./: .gitignore  .ipynb  DA-2K.md  README.md  app.py  checkpoint_downloader.py  compare_pointclouds.py  evaluate_metrics.py  evaluate_metrics_colab.ipynb  fuse_depth.py  generate_depth_maps.sh  get_depth_maps.py  index.html  main.py  nav.py  parse_realsense_depth.py  prepare_eval_data.py  pyproject.toml  requirements.txt  run.py  run_video.py  run_video_webcam.py  run_webcam.py  run_webcam_gui.py  save_depth_maps.py  streamlit_depth_client.py  view_ply.py
assets/examples/DC-510/kitchen/: kitchen_5_Depth.raw  kitchen_5_Depth_metadata.csv
backend/: check_gpu.py
depth_anything_v2/: dinov2.py  dpt.py
depth_anything_v2/dinov2_layers/: attention.py  patch_embed.py
depth_anything_v2/util/: blocks.py  transform.py
depth_backend/: image_store_depth.py  main.py  mjpeg_generator.py
metric_depth/: README.md  depth_to_pointcloud.py  dist_train.sh  exportonnx.py  inference.py  metric_checkpoint_downloader.py  pyproject.toml  requirements.txt  run.py  train.py
metric_depth/dataset/: hypersim.py  kitti.py  transform.py  us3d.py  vkitti2.py
metric_depth/dataset/splits/hypersim/: val.txt
metric_depth/dataset/splits/kitti/: val.txt
metric_depth/dataset/splits/vkitti2/: train.txt
metric_depth/depth_anything_v2/: dinov2.py  dpt.py
metric_depth/depth_anything_v2/dinov2_layers/: attention.py  block.py  drop_path.py
metric_depth/depth_anything_v2/util/: blocks.py  transform.py
metric_depth/util/: dist_helper.py  loss.py  metric.py  utils.py
pig_depth_tracker/: app.py  config.py  deprecation.py  model.py  processing.py  state.py  utils.py  visualization.py
streamlit_app/: pipeline.py
