[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["depth_anything_v2"]

[project]
name = "depth-anything-v2"
description = "Most capable monocular depth estimation (MDE) model."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "gradio_imageslider",
  "gradio==4.29.0",
  "matplotlib",
  "opencv-python",
  "torch",
  "torchvision",
]
version = "1.0.0"

[project.urls]
repository = "https://github.com/DepthAnything/Depth-Anything-V2"
